<resources>
    <string name="app_name">Formula1_Clicker</string>
    <string name="BotoMenuJoc">🏁 Joc</string>
    <string name="BotoMenuTrofeus">🏆 Classificació</string>
    <string name="BotoMenuConfiguracio">⚙️ Configuració</string>
    <string name="Titol">F1 Clicker</string>
    <string name="Pneumatics">Pneumàtics</string>
    <string name="AleroDavanter">Aleró Davanter</string>
    <string name="SuspensioDavantera">S. Davantera</string>
    <string name="Cockpit">Cockpit</string>
    <string name="Fons">Fons</string>
    <string name="SuspensioTrasera">S. Trasera</string>
    <string name="AleroTraser">Aleró Traser</string>
    <string name="TextTemp">TextTemporal</string>
    <string name="Pontons">Pontons</string>
    <string name="Voltes">voltes</string>
    <string name="Nivell">Nivell</string>
    <string name="NoPotsComprar">No tens suficients voltes per comprar la millora!</string>
    <string name="Config">Configuració</string>
    <string name="TemaApp">Tema de l\'app</string>
    <string name="Esborrar">Esborrar dades</string>
    <string name="EsborrarBoto">🗑️Esborrar</string>
    <string name="BotoAvis">Estàs segur/a d\'esborrar TOTES les teves dades?</string>
    <string name="Cancelar">Cancel·lar</string>
    <string name="GuardarText">Guardar les dades</string>
    <string name="GuardarBoto">Guardar</string>
    <string name="GuardatToast">Les dades s\'han guardat correctament!</string>
    <string name="TitolNoti">Benvingut/da!</string>
    <string name="CosNoti">Et dono la benvinguda al F1Clicker!</string>
</resources>