<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/Titolconfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="166dp"
        android:fontFamily="@font/formula1"
        android:text="@string/Config"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/Tema"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/TemaApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/formula1"
            android:text="@string/TemaApp"
            android:textColor="@color/colorText"
            android:thumbTint="@color/colorText"
            android:trackTint="#000000" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/Esborrar"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/Navegacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tema">

        <TextView
            android:id="@+id/EsborrarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/formula1"
            android:text="@string/Esborrar"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/EsborrarBoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtonDelete"
            android:text="@string/EsborrarBoto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Navegacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Millores">

        <Button
            android:id="@+id/BotoJoc"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuJoc"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BotoTrofeus"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuTrofeus"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BotoConfiguracio"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuConfiguracio"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>