<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/Navegacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Millores">

        <Button
            android:id="@+id/BotoJoc"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuJoc"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BotoTrofeus"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuTrofeus"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/BotoConfiguracio"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hapticFeedbackEnabled="true"
            android:minWidth="60dip"
            android:minHeight="30dp"
            android:text="@string/BotoMenuConfiguracio"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>